[gd_scene load_steps=16 format=3 uid="uid://c4woyvddh80lh"]

[ext_resource type="Script" path="res://scenes/duck.gd" id="1_e22o3"]
[ext_resource type="Texture2D" uid="uid://bfrffih2lcpbp" path="res://arts/ducks/duck.png" id="2_m04b3"]
[ext_resource type="Texture2D" uid="uid://4io1lsu20clk" path="res://arts/ducks/aiduck (1).png" id="3_xnv11"]
[ext_resource type="AudioStream" uid="uid://7t7hepiuap7n" path="res://sounds/duck_hunt/Quack1.wav" id="4_duc1u"]
[ext_resource type="AudioStream" uid="uid://bdxpp0x8jl5vg" path="res://sounds/duck_hunt/Quack2.wav" id="5_ssvkb"]
[ext_resource type="AudioStream" uid="uid://b4b0nn300hj0d" path="res://sounds/duck_hunt/Quack3.wav" id="6_gtxpl"]
[ext_resource type="AudioStream" uid="uid://pdxfob7l1v5q" path="res://sounds/duck_hunt/Quack4.wav" id="7_q2lnp"]
[ext_resource type="AudioStream" uid="uid://bs4cnsbsvy156" path="res://sounds/duck_hunt/Quack5.wav" id="8_bdasc"]
[ext_resource type="AudioStream" uid="uid://dajv1pi8innc8" path="res://sounds/duck_hunt/Quack6.wav" id="9_yjcim"]
[ext_resource type="AudioStream" uid="uid://lb5015pg0aeq" path="res://sounds/duck_hunt/Quack7.wav" id="10_nji3j"]
[ext_resource type="AudioStream" uid="uid://begt4bld50uug" path="res://sounds/duck_hunt/Quack8.wav" id="11_mebpk"]
[ext_resource type="AudioStream" uid="uid://h5yncjkj0sr0" path="res://sounds/duck_hunt/Quack9.wav" id="12_p8dm4"]
[ext_resource type="AudioStream" uid="uid://bmvd5vgcmrkng" path="res://sounds/duck_hunt/Quack10.wav" id="13_57m6e"]

[sub_resource type="CircleShape2D" id="CircleShape2D_mixc6"]
radius = 54.0093

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_uac1u"]
random_pitch = 1.22
random_volume_offset_db = 0.78
streams_count = 10
stream_0/stream = ExtResource("4_duc1u")
stream_0/weight = 1.0
stream_1/stream = ExtResource("5_ssvkb")
stream_1/weight = 1.0
stream_2/stream = ExtResource("6_gtxpl")
stream_2/weight = 1.0
stream_3/stream = ExtResource("7_q2lnp")
stream_3/weight = 1.0
stream_4/stream = ExtResource("8_bdasc")
stream_4/weight = 1.0
stream_5/stream = ExtResource("9_yjcim")
stream_5/weight = 1.0
stream_6/stream = ExtResource("10_nji3j")
stream_6/weight = 1.0
stream_7/stream = ExtResource("11_mebpk")
stream_7/weight = 1.0
stream_8/stream = ExtResource("12_p8dm4")
stream_8/weight = 1.0
stream_9/stream = ExtResource("13_57m6e")
stream_9/weight = 1.0

[node name="Duck" type="Node2D"]
script = ExtResource("1_e22o3")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_mixc6")

[node name="Sprites" type="Node2D" parent="."]

[node name="Duck" type="Sprite2D" parent="Sprites"]
scale = Vector2(0.045, 0.045)
texture = ExtResource("2_m04b3")

[node name="Duck2" type="Sprite2D" parent="Sprites"]
visible = false
scale = Vector2(0.841314, 0.841314)
texture = ExtResource("3_xnv11")

[node name="Quack" type="AudioStreamPlayer" parent="."]
stream = SubResource("AudioStreamRandomizer_uac1u")
volume_db = 9.904
autoplay = true
bus = &"Sound"

[connection signal="input_event" from="Area2D" to="." method="_on_area_2d_input_event"]
[connection signal="mouse_entered" from="Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_area_2d_mouse_exited"]
